[package]
name = "simple_ecs"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitset]
version = "0.2.4"
git = "https://github.com/lambdaxymox/bitset"

